# interactive-continuation

./: .gitignore  pyproject.toml  setup.py
data/: S=3_eps=0.1.npy
data/test/: y0.npy  y00.npy
icont.egg-info/: PKG-INFO  SOURCES.txt
intcont.egg-info/: PKG-INFO  SOURCES.txt
interactive_continuation/: main.py
interactive_continuation/equations/: continuation.py  equation.py  llediff.py  llediff_fft.py  utils.py
interactive_continuation/interfaces/: mainwindow.py  mainwindow.ui  mainwindow_ui.py  mplwidget.py
src/equations/: llediff_fft.py  utils.py
src/interfaces/: mainwindow.py  mplwidget.py
