[tool.poetry]
name = "interactive-continuation"
version = "0.1.0"
description = "An interactive Python project to perform numerical Continuation for nonlinear equations"
authors = ["mbataille <martinbataille@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scipy = "^1.11.3"
PySide6 = "^6.6.0"
matplotlib = "^3.8.1"
pypardiso = "^0.4.3"
findiff = "^0.10.0"
pandas = "^2.1.3"
threadpoolctl = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
